--- a/BeingSeenApp/app/src/main/res/values/strings.xml
+++ b/BeingSeenApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_notifications">Notifications</string>
 
     <string name="about_us">About US</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
