--- a/BeingSeenApp/app/src/main/res/values/strings.xml
+++ b/BeingSeenApp/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Being Seen</string>
     <string name="title_home">Home</string>
 
-    <string name="about_us">About US</string>
+    <string name="about_us">About Being Seen</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_org_user_profile_view_balance">OrgUserProfileViewBalanceActivity
